2005-11-03  IgorFoox  <ifoox@redhat.com>

	* frysk.java (main): Added a default case to argument checking that informs
	user if an incorrect option has been specified.

2005-10-12  Adam Jocksch  <ajocksch@redhat.com>

	* frysk.java (main): Fixed silly .equals error with comparing strings.

2005-10-12  Adam Jocksch  <ajocksch@redhat.com>

	* frysk.java (main): Added check for '--sourcewin' parameter, launches
	Source Window instead of procpop if found

2005-09-22  Andrew Cagney  <cagney@redhat.com>

	* frysk.java: Import frysk.Config.
	* Rename again to frysk/bindir/.

	* Rename from frysk/bin/ to
	frysk/thisisnotthebindirectoryusedbyanddeletedbyant/.

2005-09-12  Andrew Cagney  <cagney@redhat.com>

	* frysk.java: New file.

